--- a/src/app/online-booking-module/components/opticianappointment/opticianappointment.component.html
+++ b/src/app/online-booking-module/components/opticianappointment/opticianappointment.component.html
@@ -2,15 +2,26 @@
     <div class="row">
         <h4 class="info-text">Do you want to book an appointment for in-store shopping,
             repairs or pick-up?</h4>
-        <div class="col-sm-12">
-            <div class="checkbox">
+        <div   class="col-sm-12" *ngIf="isOptitian">
+            <div [(ngModel)]="isOpticianFormEnabled"   class="checkbox">
                 <label>
-                    <input type="checkbox" name="chk-optician" id="chk-optician"
-                        onclick="JavaScript:toggleVisibility(this,'optician-contact-form');">
+                    <input [(ngModel)]="isOptitian" type="checkbox" name="chk-optician" id="chk-optician ">
                 </label> Yes I would like to book an appointment with an Optician
             </div>
         </div>
-        <div class="col-md-12" id="optician-contact-form" name="optician-contact-form" style="visibility: hidden;">
+        <form [formGroup]="EmailForm"  *ngIf="!isOptitian">
+          <div   class="col-sm-4">
+            <div class="form-group label-floating">
+              <label class="control-label">Email
+                  <small>(required)</small></label>
+              <input name="email" type="text" class="form-control" formControlName="email">
+                <mat-error *ngIf="f.email.errors?.required">Email  is required</mat-error>
+                <mat-error *ngIf="f.email.errors?.email">Email Format is incorrect</mat-error>
+          </div>
+        </div>
+      </form>
+        <form [formGroup]="OpticianForm" (ngSubmit)="onOpticianFormSubmit($event)" *ngIf="isOpticianFormEnabled">
+        <div class="col-md-12" id="optician-contact-form" name="optician-contact-form"  >
             <div class="col-sm-4">
                 <div class="input-group">
                     <span class="input-group-addon">
@@ -19,28 +30,33 @@
                     <div class="form-group label-floating">
                         <label class="control-label">First Name
                             <small>(required)</small></label>
-                        <input name="firstname" type="text" class="form-control">
+                        <input name="firstname" type="text" class="form-control" formControlName="firstname">
+                          <mat-error *ngIf="f.firstname.errors?.required">first Name is required</mat-error>
                     </div>
                 </div>
 
-                <div class="input-group">
+                 <div class="input-group">
                     <span class="input-group-addon">
                         <i class="material-icons">record_voice_over</i>
                     </span>
                     <div class="form-group label-floating">
                         <label class="control-label">Last Name
                             <small>(required)</small></label>
-                        <input name="lastname" type="text" class="form-control">
+                        <input name="lastname" type="text" class="form-control" formControlName="lastname">
+                          <mat-error *ngIf="f.lastname.errors?.required">last Name is required</mat-error>
                     </div>
                 </div>
-                <div class="input-group">
+               <div class="input-group">
                     <span class="input-group-addon">
                         <i class="material-icons">looks_one</i>
                     </span>
                     <div class="form-group label-floating">
                         <label class="control-label">Street Number
                             <small>(required)</small></label>
-                        <input name="streetnumber" type="text" class="form-control">
+                        <input name="streetnumber" type="text" class="form-control" formControlName="streetnumber">
+                        <div *ngIf="submitted && f.streetnumber.errors">
+                          <mat-error *ngIf="f.streetnumber.errors?.required">street number Name is required</mat-error>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -52,7 +68,8 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Unit Number
                             <small>(required)</small></label>
-                        <input name="unitnumber" type="text" class="form-control">
+                        <input name="unitnumber" type="text" class="form-control" formControlName="unitnumber">
+                          <mat-error *ngIf="f.unitnumber.errors?.required">unit number Name is required</mat-error>
                     </div>
                 </div>
 
@@ -63,7 +80,8 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Street Name
                             <small>(required)</small></label>
-                        <input name="streetname" type="text" class="form-control">
+                        <input name="streetname" type="text" class="form-control" formControlName="streetname">
+                          <mat-error *ngIf="f.streetname.errors?.required">street  Name is required</mat-error>
                     </div>
                 </div>
                 <div class="input-group">
@@ -73,7 +91,8 @@
                     <div class="form-group label-floating">
                         <label class="control-label">City
                             <small>(required)</small></label>
-                        <input name="city" type="text" class="form-control">
+                        <input name="city" type="text" class="form-control" formControlName="city">
+                          <mat-error *ngIf="f.city.errors?.required">city Name is required</mat-error>
                     </div>
                 </div>
             </div>
@@ -85,7 +104,8 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Province
                             <small>(required)</small></label>
-                        <input name="province" type="text" class="form-control">
+                        <input name="province" type="text" class="form-control" formControlName="province">
+                          <mat-error *ngIf="f.province.errors?.required">province Name is required</mat-error>
                     </div>
                 </div>
 
@@ -96,7 +116,8 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Postal Code
                             <small>(required)</small></label>
-                        <input name="postalcode" type="text" class="form-control">
+                        <input name="postalcode" type="text" class="form-control" formControlName="postalcode">
+                          <mat-error *ngIf="f.postalcode.errors?.required">postalcode  is required</mat-error>
                     </div>
                 </div>
                 <div class="input-group">
@@ -106,7 +127,10 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Cell Phone
                             <small>(required)</small></label>
-                        <input name="cellphone" type="text" class="form-control">
+                        <input name="cellphone" type="text" class="form-control" formControlName="cellphone">
+                          <mat-error *ngIf="f.cellphone.errors?.required">firstname Name is required</mat-error>
+                          <mat-error *ngIf="f.cellphone.errors?.minLength">Cell phone doesn't match the required length</mat-error>
+                          <mat-error *ngIf="f.cellphone.errors?.pattern">Cell phone doesn't match the pattern</mat-error>
                     </div>
                 </div>
             </div>
@@ -118,7 +142,9 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Email
                             <small>(required)</small></label>
-                        <input name="email" type="text" class="form-control">
+                        <input name="email" type="text" class="form-control" formControlName="email">
+                          <mat-error *ngIf="f.email.errors?.required">Email  is required</mat-error>
+                          <mat-error *ngIf="f.email.errors?.email">Email Format is incorrect</mat-error>
                     </div>
                 </div>
 
@@ -129,10 +155,12 @@
                     <div class="form-group label-floating">
                         <label class="control-label">Insurance Company <small>(if
                                 applicable for glasses shopping)</small></label>
-                        <input name="insurancecompany" type="text" class="form-control">
+                        <input name="insurancecompany" type="text" class="form-control" formControlName="insurancecompany">
+                          <mat-error *ngIf="f.insurancecompany.errors?.required">insurance company Name is required</mat-error>
                     </div>
                 </div>
             </div>
         </div>
+      </form>
     </div>
 <!-- </div> -->
